# gazebosc

./: .appveyor.yml  .gitmodules  .travis.yml  ActorContainer.h  CMakeLists.txt  FindUnwind.cmake  Findlibzmq.cmake  GActor.cpp  GActor.h  GNode.cpp  GNode.h  ImNodes.cpp  ImNodes.h  ImNodesEz.cpp  ImNodesEz.h  OSCZmqUtils.cpp  README.md  RtMidi.cpp  TestNodes.h  actors.h  build_windows.bat  helpers.c  helpers.h  main.cpp  nodes.cp  nodes.cpp  sample.cpp  stage.cpp  test.txt  tester.py  waveplayer.py
.github/workflows/: cmake.yml
Actors/: ActorContainer.h  ClientActor.cpp  ClientActor.h  CountActor.cpp  CountActor.h  DefaultActors.h  DmxActor.cpp  DmxActor.h  HTTPLaunchpod.c  HTTPLaunchpod.h  LiveLinkActor.cpp  LiveLinkActor.h  LogActor.cpp  Midi2OSCActor.cpp  Midi2OSCActor.h  MidiActor.cpp  ModPlayerActor.cpp  ModPlayerActor.h  NatNet2OSCActor.cpp  NatNet2OSCActor.h  NatNetActor.cpp  NatNetActor.h  NatNetDataTypes.h  OSCInputActor.cpp  OSCInputActor.h  OSCListenerActor.cpp  OSCListenerActor.h  OSCOutputActor.cpp  OSCRecordActor.cpp  OSCRecordActor.h  OpenVRActor.cpp  OpenVRActor.h  OscMultiOut.cpp  ProcessActor.cpp  ProcessActor.h  PulseActor.cpp  PulseActor.h  PythonActor.cpp  PythonActor.h  RecordActor.cpp  (+13 more)
Nodes/: ClientNode.cpp  DefaultNodes.h  MidiNode.cpp  OSCListenerNode.cpp  PythonNode.cpp  PythonNode.h  UDPSendNode.cpp  UtilityNodes.cpp  test.cpp
actors/: Device.cpp  Device.hpp  DeviceList.cpp  DeviceList.hpp  DmxActor.cpp  DmxActor.h  HTTPLaunchpod.c  Midi2OSCActor.h  ModPlayerActor.cpp  NatNet2OSCActor.cpp  NatNet2OSCActor.h  NatNetActor.cpp  NatNetActor.h  NatNetDataTypes.h  OSCInputActor.cpp  OSCInputActor.h  OSCOutputActor.h  OpenVRActor.cpp  OpenVRActor.h  OscMultiOut.h  ProcessActor.cpp  ProcessActor.h  RecordActor.cpp  RecordActor.h  actors.h  osccreate_actor.c  osccreate_actor.h  pythonactor.c  pythonactor.h  pyzmsg.h
app/: AboutWindow.cpp  AboutWindow.hpp  ActorContainer.cpp  ActorContainer.hpp  App.hpp  DemoWindow.hpp  LogWindow.hpp  PyWindow.hpp  StageWindow.cpp  StageWindow.hpp  TextEditorWindow.cpp  TextEditorWindow.hpp  Window.hpp
misc/scripts/: checkver.py  pygletvisualiser.py  pyopengl.py
misc/templates/: template.py
